Changed Filter colors

--- a/css/style.css
+++ b/css/style.css
@@ -827,7 +827,7 @@ button.w3view-cart {
   background:#f5f4f0;
 }
   h3.agileits-sear-head {
-    color: #FF5722;
+    color: #151414;
     margin-bottom: 20px;
     font-size: 21px;
 }
