--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ body a {
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
+
+@media (min-width: 1200px)
+.container {
+    width: 1270px !important;
+}
+
 a:hover{
  text-decoration:none;
 }
@@ -584,7 +590,7 @@ button.w3view-cart {
 	width: 80%;
 }
 .product-men {
-    margin-top: 2em;
+    margin-top: 1em;
 }
 .men-pro-item {
     position: relative;
@@ -929,7 +935,7 @@ input.checked {
 /*-- nuts --*/
 .product-sec1 {
     box-shadow: 0px 0px 15px 0px #D6D6D6;
-    padding: 30px 20px;
+    padding: 15px 15px;
     margin-bottom: 14px;
 }
 h3.heading-tittle {
