removed most padding around product containers, matched background colors

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,14 @@ input[type="button"],input[type="submit"]{
 h1,h2,h3,h4,h5,h6{
 	margin:0;
     font-family: 'Open Sans', sans-serif;
-}	
+}
+
+.srasorange {
+    color: #FF5722;
+    font-weight: 600;
+    margin: 8px 0;
+}
+
 p{
 	margin:0;
 	letter-spacing:1px;
@@ -94,6 +101,12 @@ label{
     margin: 0 auto;
     width: 90%;
 }
+
+.item-info-product h5 {
+    font-weight: 600;
+    color: #909090;
+}
+
 /*-- shop locator --*/
 .list_of_cities {
     width: 100%;
@@ -597,6 +610,12 @@ button.w3view-cart {
 }
 
 /*added by WG*/
+
+.col-md-4.product-men {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .men-thumb-item img {
     width: 100% !important;
 }
@@ -876,6 +895,19 @@ input#amount,input#amount1 {
 	padding: 25px 15px;
 }
 /*-- //Slider range --*/
+
+
+/*ALtered column width with 8:2 ratio */
+
+@media (min-width: 992px){
+    .side-bar.col-md-3.ying {
+        width: 20% !important;
+    }
+    .agileinfo-ads-display.col-md-9.yang {
+         width: 80% !important;
+    }
+}
+
 /*-- check input --*/
 .left-side ul li {
     display: inline-block;
@@ -935,7 +967,7 @@ input.checked {
 /*-- nuts --*/
 .product-sec1 {
     box-shadow: 0px 0px 15px 0px #D6D6D6;
-    padding: 15px 15px;
+    padding: 1px;
     margin-bottom: 14px;
 }
 h3.heading-tittle {
@@ -949,8 +981,11 @@ h3.heading-tittle {
     text-align: center;
 }
 .item-info-product {
-    margin-top: 40px;
+    margin: 0px 0px;
+    padding: 7px;
     text-align: center;
+    background: #fff;
+    box-shadow: 1px 1px 6px #d0cdcd;
 }
 .item-info-product h4 a {
     color: #000;
@@ -958,11 +993,17 @@ h3.heading-tittle {
     letter-spacing: 1px;
 }
 .info-product-price {
-    margin: 12px 0;
+    margin: 8px 0;
 }
+
+.item-info-product p {
+    font-size: 12px;
+    margin-top: 8px;
+}
+
 span.item_price {
-    font-size: 18px;
-    color: #d60404;
+    font-size: 14px;
+    color: #929191;
 }
 .info-product-price del {
     font-weight: 300;
@@ -1011,6 +1052,7 @@ h3.w3l-nut-middle {
 /*-- //nuts --*/
 .ads-grid, footer, .contact-w3l, .w3_wthree_agileits_icons, .typo, .faqs-w3l, .terms-of-use, .welcome, .about, .banner-bootom-w3-agileits, .privacy {
     padding: 5em 0;
+    background: #e8e8e8;
 }
 /*-- tittle heading --*/
 h3.tittle-w3l {
